package Diadoc.Api.Proto.Invoicing;

option java_outer_classname = "FnsRegistrationMessageInfoProtos";

message FnsRegistrationMessageInfo {
	repeated bytes Certificates = 1;
}
