import "Invoicing/Signer.proto";

package Diadoc.Api.Proto.Invoicing;

option java_outer_classname = "SignatureRejectionInfoProtos";

message SignatureRejectionInfo {
	optional string ErrorMessage = 1;
	required Signer Signer = 2;
}

message SignatureRejectionGenerationRequestV2 {
	optional string ErrorMessage = 1;
	required string MessageId = 2;
	required string AttachmentId = 3;
	required bytes SignerContent = 4;
}